--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login and Register Forms</title>
+    <title>Practicing Muslim</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,15 +12,17 @@
             <form id="loginForm" class="form">
                 <h2>Login</h2>
                 <label for="loginEmail">Email:</label>
+                <label class="alert" for="registerEmail">*incorrect Email or Password</label>
                 <label class="alert" for="loginEmail">Email:</label>
                 <input type="email" id="loginEmail" name="email" required>
                 <label for="loginPassword">Password:</label>
                 <input type="password" id="loginPassword" name="password" required>
-                <button type="submit">Login</button>
+                <button type="submit" id="loginButton">Login</button>
             </form>
             
             <p class="note">Don't have an account <a href="./register.html" class="bold">Register Here</a></p>
         </div>
     </div>
+    <script src="./app.js"></script>
 </body>
 </html>
