--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login and Register Forms</title>
+    <title>Signup/Register - Practicing Muslim</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
