user Panel Completed

--- a/app/userPanel.html
+++ b/app/userPanel.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Panel</title>
+    <link rel="stylesheet" href="userPanel.css">
 </head>
+
 <body>
 
-    <h1>loged in</h1>
-    
+    <nav class="container">
+        <div class="logo">
+            <!-- <img src="./imgs/logo.png" alt=""> -->
+            <h1>The Edu Master</h1>
+        </div>
+        <div>
+            <h3 class="userName">Muhammad Ahmed</h3>
+        </div>
+    </nav>
+    <div class="main-container">
+        <h1 class="heading">Courses</h1>
+        <div class="courses">
+            
+        </div>
+    </div>
+
+    <script src="./userPanel.js"></script>
 </body>
+
 </html>
