--- a/app/userPanel.html
+++ b/app/userPanel.html
@@ -15,14 +15,37 @@
             <!-- <img src="./imgs/logo.png" alt=""> -->
             <h1>The Edu Master</h1>
         </div>
-        <div>
+        <div class="user-info">
             <h3 class="userName">Muhammad Ahmed</h3>
+            <img class="avatar"
+                src="https://static.vecteezy.com/system/resources/thumbnails/000/439/863/small/Basic_Ui__28186_29.jpg"
+                alt="Avatar Placeholder">
         </div>
     </nav>
+
+    <div class="header">
+    </div>
+
     <div class="main-container">
         <h1 class="heading">Courses</h1>
-        <div class="courses">
-            
+        <div class="courses"></div>
+        <div class="quiz">
+            <h1 style="margin-top: 5%;" class="heading">Self Assisment Quiz</h1>
+            <div class="container">
+                <div class="user-details"><img class="avatar"
+                        src="https://static.vecteezy.com/system/resources/thumbnails/000/439/863/small/Basic_Ui__28186_29.jpg"
+                        alt="Avatar Placeholder">
+                    <h2 class="userName">Muhammad Ahmed</h2>
+                </div>
+                <button style="border: none; min-width: 150px;" class="quiz-btn">
+                    Take A Quiz
+                </button>
+                <div class="score">
+                    <h3>Your Over All Score is <span style="font-weight: 800;">250/500</span></h3>
+                </div>
+
+            </div>
+
         </div>
     </div>
 
