--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practicing Muslim</title>
     <link rel="stylesheet" href="styles.css">
+        <!-- Add these scripts to your HTML file -->
+<!-- <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-auth.js"></script> -->
 </head>
 <body>
     <div class="container">
@@ -24,5 +28,7 @@
         </div>
     </div>
     <script src="./app.js"></script>
+
+
 </body>
 </html>
